[tool.poetry]
name = "retry-async"
version = "0.1.3"
description = ""
authors = ["Jeremy Berman <jerber@sas.upenn.edu>"]
readme = "README.md"
packages = [{include = "retry_async"}]

[tool.poetry.dependencies]
python = "^3.10"
decorator = "^5.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
